--- a/package.json
+++ b/package.json
@@ -15,9 +15,18 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@douyinfe/semi-icons": "^2.82.1",
+    "@douyinfe/semi-illustrations": "^2.82.1",
     "@douyinfe/semi-ui": "^2.77.1",
+    "@lexical/code": "^0.12.5",
     "@lexical/html": "^0.33.0",
+    "@lexical/link": "^0.12.5",
+    "@lexical/list": "^0.12.5",
+    "@lexical/markdown": "^0.12.5",
     "@lexical/react": "^0.12.5",
+    "@lexical/rich-text": "^0.12.5",
+    "@lexical/selection": "^0.12.5",
+    "@lexical/table": "^0.12.5",
+    "@lexical/utils": "^0.12.5",
     "@monaco-editor/react": "^4.7.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.2.0",
@@ -48,6 +57,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.3.4",
